--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ts-jest": "^28.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "yup": "^0.32.11"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
