--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "ts-jest": "^28.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4",
-    "yup": "^0.32.11"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -40,6 +39,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "yup": "^0.32.11"
   }
 }
