--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "jest": "^28.1.2",
+    "sqlite3": "^5.0.8",
+    "supertest": "^6.2.4",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
